--- a/plugin.yml
+++ b/plugin.yml
@@ -3,7 +3,7 @@ description: Core for my plugins
 author: Genhis
 website: http://genhis.6f.sk/
 main: sk.genhis.glib.GLib
-version: 1.4.1
+version: ${project.version}
 api-version: 1.13
 commands:
   glib:
